# complaint-res

./: README.md  agent.py  app.py  main.py  pyproject.toml  tools.py
skills/complaint-triage/: SKILL.md
skills/mortgage-fees/: SKILL.md
skills/reg-e-disputes/: SKILL.md
skills/reg-e-disputes/assets/: dispute_denial_letter.md  provisional_credit_letter.md
skills/wire-transfers/: SKILL.md
