[project]
name = "complaint-agent"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "deepagents>=0.6.8",
    "langchain>=1.3.4",
    "langchain-community>=0.4.2",
    "langchain-openai>=1.2.2",
    "python-dotenv>=1.2.2",
    "streamlit>=1.58.0",
]
